crates/memcode/derive/src/tests/snapshots/memcode_derive__tests__expand__find_root_with_candidates-2.snap
---
source: project/crates/memcode/derive/src/tests/expand.rs
assertion_line: 20
expression: pretty(ts_2)
---
compile_error!(
    "MemCodec: could not find any of the candidate crates: `a`. Add `a = { version = \"*\" }` to your Cargo.toml."
);
