crates/memcode/derive/src/tests/snapshots/memcode_derive__tests__expand__find_root_with_candidates.snap
---
source: crates/memcode/derive/src/tests/expand.rs
assertion_line: 22
expression: pretty(ts_1)
---
compile_error!(
    "MemCodec: could not find any of the candidate crates: `a`, `b`. Add `a = { version = \"*\" }` (preferred) or `b = { version = \"*\" }` to your Cargo.toml."
);
